--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,14 +1,12 @@
 name: Generate pacman animation
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
-
+  schedule:
+    - cron: "0 */12 * * *"  # Runs exactly every 12 hours (midnight & noon UTC)
   workflow_dispatch:
-
   push:
     branches:
-    - main
+      - main
 
 jobs:
   generate:
@@ -18,16 +16,19 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: generate pacman-contribution-graph.svg
+      - name: Checkout repository
+        uses: actions/checkout@v4  # Ensures the repo is available
+
+      - name: Generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
-          github_user_name: ${{ Ramprasanth7119 }}
+          github_user_name: Ramprasanth7119
+          output_path: dist/pacman-contribution-graph.svg  # Ensure correct output directory
 
-
-      - name: push pacman-contribution-graph.svg to the output branch
+      - name: Push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
-          build_dir: dist
+          build_dir: dist  # Ensure the correct output directory is pushed
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
