--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -2,7 +2,7 @@ name: Generate pacman animation
 
 on:
   schedule:
-    - cron: "0 */12 * * *"  # Runs exactly every 12 hours (midnight & noon UTC)
+    - cron: "0 */12 * * *"  # Runs every 12 hours at 00:00 and 12:00 UTC
   workflow_dispatch:
   push:
     branches:
@@ -17,18 +17,18 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4  # Ensures the repo is available
+        uses: actions/checkout@v4  # Ensures repo is available
 
       - name: Generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
-          github_user_name: Ramprasanth7119
+          github_user_name: Ramprasanth7119  # Explicitly use your GitHub username
           output_path: dist/pacman-contribution-graph.svg  # Ensure correct output directory
 
       - name: Push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
-          build_dir: dist  # Ensure the correct output directory is pushed
+          build_dir: dist  # Ensure correct directory is pushed
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
