--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,18 +17,18 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4  # Ensures the repo is available for the workflow
+        uses: actions/checkout@v4  # Ensures repo access
 
       - name: Generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: Ramprasanth7119  # Use your GitHub username
+          github_user_name: Ramprasanth7119  # Explicitly set your username
           outputs: dist/snake.svg?palette=github-dark
 
       - name: Push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
-          build_dir: dist
+          build_dir: dist  # Ensure correct directory is pushed
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
